tests/ui/coroutine/issue-110929-coroutine-conflict-error-ice.stderr
error[E0499]: cannot borrow `*x` as mutable more than once at a time
  --> $DIR/issue-110929-coroutine-conflict-error-ice.rs:8:9
   |
LL |         let _c = || yield *&mut *x;
   |                  --             -- first borrow occurs due to use of `*x` in coroutine
   |                  |
   |                  first mutable borrow occurs here
LL |         || _ = &mut *x;
   |         ^^          -- second borrow occurs due to use of `*x` in closure
   |         |
   |         second mutable borrow occurs here
LL |
LL |     };
   |     - first borrow might be used here, when `_c` is dropped and runs the destructor for coroutine

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
