tests/ui/coroutine/issue-110929-coroutine-conflict-error-ice.rs
// edition:2021
#![feature(coroutines)]

fn main() {
    let x = &mut ();
    || {
        let _c = || yield *&mut *x;
        || _ = &mut *x;
        //~^ cannot borrow `*x` as mutable more than once at a time
    };
}
